# Modern-CMake-for-Cpp

./: .gitignore
examples/chapter02/01-arguments/: unquoted.cmake
examples/chapter02/11-stage/: main.cpp
examples/chapter03/05-structure/src/app1/: app1.cpp
examples/chapter03/07-features/: CMakeLists.txt
examples/chapter04/01-targets/: CMakeLists.txt
examples/chapter04/02-propagated/: CMakeLists.txt
examples/chapter04/03-command/: CMakeGraphVizOptions.cmake  main.cpp  template.xyz
examples/chapter04/04-command/: CMakeLists.txt
examples/chapter05/04-configure/: configure.h.in
examples/chapter05/06-precompile/: CMakeLists.txt  dadada.cpp  hello.cpp  myheader.h
examples/chapter07/01-find-package-variables/: CMakeLists.txt  main.cpp
examples/chapter07/03-find-pkg-config/: CMakeLists.txt
examples/chapter08/04-gtest/test/: CMakeLists.txt
examples/chapter11/01-export/: CMakeLists.txt
examples/chapter11/02-install-targets/: CMakeLists.txt
examples/chapter11/06-install-export/: CMakeLists.txt
examples/chapter12/01-full-project/: CMakeLists.txt
examples/chapter12/01-full-project/cmake/: Install.cmake
examples/chapter12/01-full-project/src/calc/: CMakeLists.txt
examples/chapter12/01-full-project/src/calc_console/: CMakeLists.txt
